--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="modal"></div>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
